navbar refinements, font

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Page Title</title>
+        <title>Adam Chan</title>
         <link rel="icon" type="image/x-icon" href="Images/seal.ico">
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
@@ -10,11 +10,11 @@
     <nav>
         <ul>
             <li><a href="index.html" class="active">Adam Chan</a></li>
-            <li><a href="contact">Contact</a></li>
-            <li><a href="https://www.github.com/ccsons">GitHub</a> |</li>
-            <li><a href="music">Music</a> |</li>
-            <li><a href="blog">Blog</a> |</li>
-            <li><a href="me">About Me</a> |</li>
+            <li>&nbsp<a href="contact">Contact</a></li>
+            <li>&nbsp<a href="https://www.github.com/ccsons">GitHub</a></li>
+            <li>&nbsp<a href="music">Music</a></li>
+            <li>&nbsp<a href="blog">Blog</a></li>
+            <li><a href="me">About Me</a></li>
         </ul>
       </nav>
 </html>
