--- a/index.html
+++ b/index.html
@@ -17,4 +17,7 @@
             <li><a href="me">About Me</a></li>
         </ul>
       </nav>
+      <body>
+        <h1>Under construction :p</h1>
+      </body>
 </html>
