flex, under construction fix

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <nav>
-        <ul>
-            <li><a href="index.html" class="active">Adam Chan</a></li>
-            <li>&nbsp<a href="contact">Contact</a></li>
-            <li>&nbsp<a href="https://www.github.com/ccsons">GitHub</a></li>
-            <li>&nbsp<a href="music">Music</a></li>
-            <li>&nbsp<a href="blog">Blog</a></li>
-            <li><a href="me">About Me</a></li>
-        </ul>
-      </nav>
-      <body>
-        <h1>Under construction :p</h1>
-      </body>
+    <body>
+        <nav>
+            <a href="index.html" class="active">Adam Chan</a>
+            <ul>
+                <li><a href="me">About Me</a></li>
+                <li>&nbsp<a href="blog">Blog</a></li>
+                <li>&nbsp<a href="music">Music</a></li>
+                <li>&nbsp<a href="https://www.github.com/ccsons">GitHub</a></li>
+                <li>&nbsp<a href="contact">Contact</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1>Under construction :p</h1>
+        </main>
+    </body>
 </html>
