--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav>
-            <a href="index.html" class="active">Adam Chan</a>
+            <a href="" class="active">Adam Chan</a>
             <ul>
                 <li><a href="me">About Me</a></li>
                 <li>&nbsp<a href="blog">Blog</a></li>
