--- a/me/index.html
+++ b/me/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">Adam Chan</a>
+            <a href="../">Adam Chan</a>
             <ul>
-                <li><a href="me" class="active">About Me</a></li>
+                <li><a href="" class="active">About Me</a></li>
                 <li>&nbsp<a href="blog">Blog</a></li>
                 <li>&nbsp<a href="music">Music</a></li>
                 <li>&nbsp<a href="https://www.github.com/ccsons">GitHub</a></li>
