actually fixed linking...

--- a/me/index.html
+++ b/me/index.html
@@ -12,10 +12,10 @@
             <a href="../">Adam Chan</a>
             <ul>
                 <li><a href="" class="active">About Me</a></li>
-                <li>&nbsp<a href="blog">Blog</a></li>
-                <li>&nbsp<a href="music">Music</a></li>
+                <li>&nbsp<a href="../blog">Blog</a></li>
+                <li>&nbsp<a href="../music">Music</a></li>
                 <li>&nbsp<a href="https://www.github.com/ccsons">GitHub</a></li>
-                <li>&nbsp<a href="contact">Contact</a></li>
+                <li>&nbsp<a href="../contact">Contact</a></li>
             </ul>
         </nav>
         <main>
