--- a/me/index.html
+++ b/me/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <title>Adam Chan</title>
-        <link rel="icon" type="image/x-icon" href="Images/seal.ico">
+        <link rel="icon" type="image/x-icon" href="../Images/seal.ico">
         <link rel="stylesheet" href="../styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
