--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="../me" >About Me</a></li>
                 <li>&nbsp<a href="../blog">Blog</a></li>
-                <li>&nbsp<a href="../Music">Music</a></li>
+                <li>&nbsp<a href="../music">Music</a></li>
                 <li>&nbsp<a href="https://www.github.com/ccsons">GitHub</a></li>
                 <li>&nbsp<a href="" class="active">Contact</a></li>
             </ul>
